# ScriptRunner

./: .gitignore  CMakeLists.txt  Main.qml  Menue.qml  Settings.qml  actionmanager.cpp  actionmanager.h  actions.json  main.cpp  mousepositionprovider.cpp  mousepositionprovider.h  settingsmanager.cpp  settingsmanager.h  srunner.cpp  srunner.h
qml/: FileSelectDialog.qml  Main.qml  Menue.qml  Settings.qml  actions.json
